src/objects/Visit__c.object
<CustomObject>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Appointment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Child_Notes__c</fullName>
        <label>Child Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child</label>
        <referenceTo>Child__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height (in cm)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Visit_Date__c</fullName>
        <label>Next Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Notes__c</fullName>
        <label>Parent Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reminded_of_GP_Checkup__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Was the parent reminded to make GP checkup during the visit?</inlineHelpText>
        <label>Reminded of GP Checkup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reminded_of_Immunizations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminded of Immunisations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requires Follow-Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Reason__c</fullName>
        <label>Visit Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Routine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <label>Visit Type</label>
        <picklist>
            <picklistValues>
                <fullName>2 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-8 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9-12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3 Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Visit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>